# OnCamera

./: CMakeLists.txt  buildcmake.bat
.buildlinux/: CMakeCache.txt  Makefile  cmake_install.cmake
.buildlinux/ui/: mainwindow.glade
src/: main.c
src/include/ui/: mainwindow.h
src/ui/: mainwindow.c
